--- a/.github/workflows/eme-build-and-test-dotnet.yml
+++ b/.github/workflows/eme-build-and-test-dotnet.yml
@@ -47,7 +47,7 @@ jobs:
         uses: dorny/test-reporter@c9b3d0e2bd2a4e96aaf424dbaa31c46b42318226
         if: success() || failure()
         with:
-          name: Test Results
+          name: Test Results ${{matrix.os}}
           path: Energy.Test/TestResults/TestResults.trx
           reporter: dotnet-trx
   
