--- a/Energy.App.Standalone/package.json
+++ b/Energy.App.Standalone/package.json
@@ -2,12 +2,12 @@
   "name": "explain-my-energy",
   "version": "1.0.0",
   "description": "Understand your energy consumption and carbon emissions, and forecast your future energy costs based on seasonal changes and tariff increases",
-  "scripts": { 
+  "scripts": {
     "build": "node src/build.js",
     "buildDev": "node src/build.js --development",
     "buildProd": "node src/build.js --production",
     "buildCreditsDoc": "node src/attributionAndLicensing/GenerateCreditsDoc.js",
-    "test": "mocha --recursive --grep '.*' src/test"
+    "test": "cross-env XUNIT_FILE=xunit.xml cross-env LOG_XUNIT=true mocha -R xunit-file --recursive --grep '.*' src/test"
   },
   "repository": {
     "type": "git",
@@ -28,16 +28,21 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "@types/dompurify": "^3.0.2",
+    "@types/glob": "^8.1.0",
     "@types/node": "^20.4.10",
     "@types/webpack": "^5.28.1",
     "@typescript-eslint/eslint-plugin": "^6.3.0",
     "@typescript-eslint/parser": "^6.3.0",
     "async-exit-hook": "^2.0.1",
     "autoprefixer": "^10.4.15",
+    "chai": "^4.3.8",
+    "cheerio": "^1.0.0-rc.12",
     "copy-webpack-plugin": "^11.0.0",
+    "cross-env": "^7.0.3",
     "css-loader": "^6.8.1",
     "ejs": "^3.1.9",
     "eslint": "^8.47.0",
+    "glob": "^10.3.4",
     "handlebars": "^4.7.8",
     "he": "^1.2.0",
     "html-bundler-webpack-plugin": "^2.8.0",
@@ -45,16 +50,19 @@
     "license-checker-rseidelsohn": "^4.2.6",
     "marked": "^7.0.3",
     "mocha": "^10.2.0",
+    "mocha-junit-reporter": "^2.2.1",
     "postcss": "^8.4.28",
     "postcss-loader": "^7.3.3",
     "sass": "^1.66.1",
     "sass-loader": "^13.3.2",
+    "spec-xunit-file": "^0.0.1-3",
     "terser-webpack-plugin": "^5.3.9",
     "ts-loader": "^9.4.4",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
+    "xunit-file": "^2.0.1",
     "yargs": "^17.7.2"
   },
   "dependencies": {
