--- a/.github/workflows/eme-reusable-unit-tests-and-checks.yml
+++ b/.github/workflows/eme-reusable-unit-tests-and-checks.yml
@@ -1,33 +1,42 @@
-name: Unit Tests and Checks
+name: Resusable Unit Tests and Checks
 
 on:
-  push:
-    branches:
-      - main
-      - dev
-      - staging
-  pull_request:
-    types: [opened, synchronize, reopened]
-    branches:
-      - staging
-      - main
+  workflow_call:
+    inputs: 
+      os:
+        description: 'The OS to run the tests on'
+        required: true
+        type: string
+        default: 'ubuntu-latest'
+      frontendEnv:
+        description: 'The frontend environment to run the tests on'
+        required: true
+        type: string
+        default: 'staging'
+      DotNetVersion:
+        description: 'The .NET SDK version to use'
+        required: true
+        type: string
+        default: '7.0.400'
+      NodeVersion:
+        description: 'The node version to use'
+        required: true
+        type: string
+        default: '18.x'
+      
 
 env:
-  DOTNET_VERSION: '7.0.400' # The .NET SDK version to use
-  NODE_VERSION: '18' # The node version to use
+  DOTNET_VERSION: ${{inputs.DotNetVersion}} # The .NET SDK version to use
+  NODE_VERSION: ${{inputs.NodeVersion}}  # The node version to use
       
 
 jobs:
   unit-tests:
-    if: github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.action != 'closed')
-    name: Unit-Test-${{matrix.os}}
-    runs-on: ${{ matrix.os }}
+    name: Unit-Test-${{inputs.os}}-${{inputs.frontendEnv}}
+    runs-on: ${{ inputs.os }}
     permissions:
       checks: write
       contents: read
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest, macOS-latest]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -49,12 +58,13 @@ jobs:
         run: |
           dotnet test Energy.Test --no-build --configuration Release --logger:"trx;LogFileName=TestResults.trx"
           echo "::set-output name=dotnet-tests-result::$?" 
+        shell: bash
 
       - name: Test Report
         uses: dorny/test-reporter@c9b3d0e2bd2a4e96aaf424dbaa31c46b42318226
         if: success() || failure()
         with:
-          name: Test Results ${{matrix.os}}
+          name: Test Results ${{inputs.os}}
           path: Energy.Test/TestResults/TestResults.trx
           reporter: dotnet-trx
       
@@ -74,20 +84,21 @@ jobs:
         id: frontend-tests
         working-directory: ./Energy.App.Standalone
         run: |
-          npm run test
+          npm run test -- --environments ${{inputs.frontendEnv}}
           echo "::set-output name=frontend-tests-result::$?"
-
-      - name: Test Report
+        shell: bash
+      
+      - name: Frontent Test Report 
         uses: dorny/test-reporter@c9b3d0e2bd2a4e96aaf424dbaa31c46b42318226
         if: success() || failure()
         with:
-          name: Frontend Test Report
+          name: Frontend Test Report ${{inputs.frontendEnv}}
           path: Energy.App.Standalone/testResults/clientDeploymentTestResults.json
           reporter: mocha-json
       
       - name: Check Results
         run: |
-          if [ "${{ steps.dotnet-tests.outputs.dotnet-tests-result }}" != "0" ] || [ "${{ steps.frontend-tests.outputs.frontend-tests-result }}" != "0" ]; then
+          if [ ${{ steps.dotnet-tests.outputs.dotnet-tests-result != '0' }}  -o ${{ steps.frontend-tests.outputs.frontend-tests-result != '0' }} ]; then
             exit 1
           fi
 
