--- a/.github/workflows/eme-reusable-unit-tests-and-checks.yml
+++ b/.github/workflows/eme-reusable-unit-tests-and-checks.yml
@@ -32,7 +32,7 @@ env:
 
 jobs:
   unit-tests:
-    name: Unit-Test-${{inputs.os}}-${{inputs.frontendEnv}}
+    name: Unit-Tests-and-Checks-${{inputs.os}}-${{inputs.frontendEnv}}
     runs-on: ${{ inputs.os }}
     permissions:
       checks: write
@@ -43,6 +43,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 5
+          lfs: false
 
       - name: Setup .NET Core
         uses: actions/setup-dotnet@v3
@@ -59,8 +62,7 @@ jobs:
         continue-on-error: true
         id: dotnet-tests
         run: |
-          dotnet test Energy.Test --no-build --configuration Release --logger:"trx;LogFileName=TestResults.trx"
-          echo "::set-output name=dotnet-tests-result::$?" 
+          dotnet test Energy.Test --no-build --configuration Release --logger:"trx;LogFileName=TestResults.trx" --verbosity normal
 
       - name: Test Report
         uses: dorny/test-reporter@c9b3d0e2bd2a4e96aaf424dbaa31c46b42318226
@@ -87,7 +89,6 @@ jobs:
         working-directory: ./Energy.App.Standalone
         run: |
           npm test --environments=${{inputs.frontendEnv}}
-          echo "::set-output name=frontend-tests-result::$?"
       
       - name: Frontent Test Report 
         uses: dorny/test-reporter@c9b3d0e2bd2a4e96aaf424dbaa31c46b42318226
@@ -97,10 +98,18 @@ jobs:
           path: Energy.App.Standalone/testResults/clientDeploymentTestResults.xml
           reporter: java-junit
       
-      - name: Check Results
+      - name: Report Results and Checks
         run: |
-          if [ ${{ steps.dotnet-tests.outputs.dotnet-tests-result != '0' }}  -o ${{ steps.frontend-tests.outputs.frontend-tests-result != '0' }} ]; then
+          echo "## Test Results for ${{ inputs.os }} - ${{inputs.frontendEnv}}" >> $GITHIB_STEP_SUMMARY
+          echo "- dotnet v${{env.DOTNET_VERSION}}, node v${{env.NODE_VERSION}}" >> $GITHIB_STEP_SUMMARY
+          echo "" >> $GITHIB_STEP_SUMMARY
+          echo "### dotnet-tests result: ${{ steps.dotnet-tests.outcome }}" >> $GITHIB_STEP_SUMMARY
+          echo "### frontend-tests result: ${{ steps.frontend-tests.outcome }}" >> $GITHIB_STEP_SUMMARY
+
+          if [[ "${{ steps.dotnet-tests.outcome }}" == "success" && "${{ steps.frontend-tests.outcome }}" == "success" ]]; then
+            echo " - All tests passed" >> $GITHIB_STEP_SUMMARY
+          else
+            echo " - Failed tests" >> $GITHIB_STEP_SUMMARY
             exit 1
           fi
-
 
